Fix Windows arrow keys, mouse drag, and add horizontal wheel support (#71)
* Initial plan

* Fix Windows arrow key detection by resuming JLine terminal pump thread

On Windows, JLine's terminal starts paused and needs resume() to be
called to start the input pump thread that processes keyboard events.
Without this, arrow keys are not detected on Windows.

Also added getInputStream() method to Terminal interface and
implementations to fix pre-existing test compilation errors.

Co-authored-by: crramirez <8397379+crramirez@users.noreply.github.com>

* Remove `getInputStream` method and related test cases from `Terminal` interface and implementations, and refactor conditional platform-specific logic in `TTYSessionInfo`.

* Handle SS3 arrow key sequences (ESC O A/B/C/D) for JLine on Windows

JLine's Windows terminal sends arrow keys as ESC O A/B/C/D (SS3 format)
instead of ESC [ A/B/C/D (CSI format). The ESCAPE_INTERMEDIATE state
now handles these sequences in addition to function keys F1-F4.

Co-authored-by: crramirez <8397379+crramirez@users.noreply.github.com>

* Remove unnecessary `resume()` call for JLine terminal initialization on Windows, as it is no longer required.

* Unify arrow key handling and fix mouse drag on Windows

1. Created handleArrowKey() helper method to consolidate duplicate
   arrow key handling code between CSI and SS3 escape sequences.

2. Fixed mouse drag on Windows: JLine's Windows terminal doesn't send
   the motion bit (32) during drag operations. Now we detect when
   a button is already tracked as pressed and treat subsequent press
   events for the same button as motion events.

Co-authored-by: crramirez <8397379+crramirez@users.noreply.github.com>

* Add horizontal wheel support and update X10 protocol comment

1. Updated comment to reference X10 protocol instead of just Windows/JLine
   since the mouse drag fix applies to any X10-compatible mouse protocol.

2. Added horizontal wheel (tilt wheel) support:
   - Button 6 (code 66): wheel r